--- a/IKEA/Views/_ViewImports.cshtml
+++ b/IKEA/Views/_ViewImports.cshtml
@@ -1,3 +1,12 @@
 ﻿@using IKEA
-@using IKEA.Models
+@using IKEA.BLL.Dto
+@using IKEA.ViewModels
+@using IKEA.PL.ViewModels.Department
+@using IKEA.BLL.Dto.Employee
+@using IKEA.DAL.Models.Employee
+
+
+
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
